fixed grid overflow

--- a/frontend/src/metric.css
+++ b/frontend/src/metric.css
@@ -6,7 +6,6 @@
 @media screen and (min-width: 1000px) {
     .metrics {
         padding: 0 3rem;
-        display: grid;
     }
     .metrics h3 {
         background: -webkit-linear-gradient(45deg, #f9b9a4, #f599bf, #9fa5fb);
@@ -68,6 +67,10 @@
     }
     .metrics .top_posts {
         grid-row: 1/3;
+    }
+    /* set all cards to have min-width 0 to prevent grid overflow */
+    .card {
+        min-width: 0;
     }
 }
 
